crates/flowscope-core/tests/snapshots/snapshots__run_bigquery_snapshot_test@bigquery_unnest_basic.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "column_35d356053710fc8f",
          "type": "column",
          "label": "tag",
          "qualifiedName": "users.tag"
        },
        {
          "id": "column_b446bb46529475d8",
          "type": "column",
          "label": "tag"
        },
        {
          "id": "column_c6c17791694b01ca",
          "type": "column",
          "label": "user_id"
        },
        {
          "id": "column_cb9e7c434971f5fc",
          "type": "column",
          "label": "user_id",
          "qualifiedName": "users.user_id"
        },
        {
          "id": "output_b558dd754c71cfa6",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_10a0682dff76cdbc",
          "type": "table",
          "label": "users",
          "qualifiedName": "users"
        }
      ],
      "edges": [
        {
          "id": "edge_0502768507a96471",
          "from": "output_b558dd754c71cfa6",
          "to": "column_b446bb46529475d8",
          "type": "ownership"
        },
        {
          "id": "edge_192c6dd95f9bca44",
          "from": "column_cb9e7c434971f5fc",
          "to": "column_c6c17791694b01ca",
          "type": "data_flow"
        },
        {
          "id": "edge_45af111910da72b6",
          "from": "column_35d356053710fc8f",
          "to": "column_b446bb46529475d8",
          "type": "data_flow"
        },
        {
          "id": "edge_b5f9022f28ddbac0",
          "from": "output_b558dd754c71cfa6",
          "to": "column_c6c17791694b01ca",
          "type": "ownership"
        },
        {
          "id": "edge_f430e6d5281a1dfc",
          "from": "table_10a0682dff76cdbc",
          "to": "column_cb9e7c434971f5fc",
          "type": "ownership"
        },
        {
          "id": "edge_fbb0cefa72e20652",
          "from": "table_10a0682dff76cdbc",
          "to": "column_35d356053710fc8f",
          "type": "ownership"
        }
      ],
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "column_5235f558f510c25e",
        "type": "column",
        "label": "user_id",
        "canonicalName": {
          "schema": "users",
          "name": "user_id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_cb9e7c434971f5fc"
          }
        ]
      },
      {
        "id": "column_b446bb46529475d8",
        "type": "column",
        "label": "tag",
        "canonicalName": {
          "name": "tag"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_b446bb46529475d8"
          }
        ]
      },
      {
        "id": "column_c6c17791694b01ca",
        "type": "column",
        "label": "user_id",
        "canonicalName": {
          "name": "user_id"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_c6c17791694b01ca"
          }
        ]
      },
      {
        "id": "column_d6db6b522d1f61b3",
        "type": "column",
        "label": "tag",
        "canonicalName": {
          "schema": "users",
          "name": "tag"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "column_35d356053710fc8f"
          }
        ]
      },
      {
        "id": "output_b558dd754c71cfa6",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_b558dd754c71cfa6"
          }
        ]
      },
      {
        "id": "table_10a0682dff76cdbc",
        "type": "table",
        "label": "users",
        "canonicalName": {
          "name": "users"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_10a0682dff76cdbc"
          }
        ]
      }
    ],
    "edges": [
      {
        "id": "edge_0502768507a96471",
        "from": "output_b558dd754c71cfa6",
        "to": "column_b446bb46529475d8",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_192c6dd95f9bca44",
        "from": "column_5235f558f510c25e",
        "to": "column_c6c17791694b01ca",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_45af111910da72b6",
        "from": "column_d6db6b522d1f61b3",
        "to": "column_b446bb46529475d8",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_b5f9022f28ddbac0",
        "from": "output_b558dd754c71cfa6",
        "to": "column_c6c17791694b01ca",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_f430e6d5281a1dfc",
        "from": "table_10a0682dff76cdbc",
        "to": "column_5235f558f510c25e",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      },
      {
        "id": "edge_fbb0cefa72e20652",
        "from": "table_10a0682dff76cdbc",
        "to": "column_d6db6b522d1f61b3",
        "type": "ownership",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [],
  "summary": {
    "statementCount": 1,
    "tableCount": 1,
    "columnCount": 4,
    "joinCount": 0,
    "complexityScore": 5,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 0
    },
    "hasErrors": false
  }
}
