crates/flowscope-core/tests/snapshots/snapshots__run_bigquery_snapshot_test@bigquery_unnest_with_offset.snap
---
source: crates/flowscope-core/tests/snapshots.rs
expression: clean_result
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "nodes": [
        {
          "id": "output_b558dd754c71cfa6",
          "type": "output",
          "label": "Output"
        }
      ],
      "edges": [],
      "joinCount": 0,
      "complexityScore": 1
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "output_b558dd754c71cfa6",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_b558dd754c71cfa6"
          }
        ]
      }
    ],
    "edges": []
  },
  "issues": [
    {
      "severity": "warning",
      "code": "UNRESOLVED_REFERENCE",
      "message": "Column 'item' referenced but no tables are currently in scope",
      "statementIndex": 0
    },
    {
      "severity": "warning",
      "code": "UNRESOLVED_REFERENCE",
      "message": "Column 'offset_pos' referenced but no tables are currently in scope",
      "statementIndex": 0
    }
  ],
  "summary": {
    "statementCount": 1,
    "tableCount": 0,
    "columnCount": 0,
    "joinCount": 0,
    "complexityScore": 1,
    "issueCount": {
      "errors": 0,
      "warnings": 2,
      "infos": 0
    },
    "hasErrors": false
  }
}
